# Skeleton-Key-Marmalade

./: .gitignore  CONNECT  DEBUGTOKEN  DISTBB  DISTWP8.CMD  SkeletonKey.mkb
archive/: compress.bat  compress.sh  gles1-atitc.dz  gles1.dz
data/: app.icf  levels.db
data/fonts/: convert2h.sh  font_algerian_16.h  font_algerian_20.h  font_algerian_24.h  font_deutsch_26.h  font_gabriola_14.h  font_gabriola_16b.h  font_gabriola_22b.h
data/graphics/backgrounds/: make_blur.sh
data/graphics/instructions/: instructions_page4.psd
other_files/graphics/: instructions.psd  leaderboard.psd  menu_alt.psd
other_files/graphics/10 Old Text Styles/Information/: Demo Font Information.txt  Documentation.txt
other_files/graphics/Pirate Kids Party Flyer Template/: readme.txt
other_files/graphics/Wood Styles 2563762/main/: Read Me.txt
other_files/graphics/elements/Mystic forest during a foggy day/: Thumbs.db
other_files/graphics/elements/Mystic forest during a foggy day/JPEG/: Thumbs.db
other_files/graphics/fantasy-styles-magic-fantasy/: fantasy-styles-magic.asl  help.txt
other_files/s3e/: make_postagestamp.sh
proj_compat/: CMakeLists.txt  CONNECT  DEBUGTOKEN  DEBUGTOKEN.CMD  build_info.h  configure_and_build_android  configure_and_build_bb  debugtoken1.bar  test.cpp
proj_compat/source/: AngelcodeFont.cpp  BMF_font.cpp  BMF_font.h  FPSLimit.hpp  SDLGLTexture.cpp  SDLGLTexture.hpp  foreach_.h
proj_compat/source/SimpleAudio/qnx/: _bb_simple_audio_engine.cpp
proj_compat/source/audio_engine/: audio.cpp  audio.h  audio_descriptor.h  audio_effects.h  audio_input.cpp  audio_input.h  audio_stream.cpp  audio_stream.h  audio_utils.cpp  audio_utils.h
proj_compat/source/compat/: AffineTransform.h  Iw2D.h  IwGx.h  IwResManager.h  TileSetUtility.h  s3e.cpp  s3e.h  s3ePointer.h  s3eTypes.h
proj_compat/source/dgreed/: async.h  datastruct.h  localization.c  localization.h  memory.h  mempool.c  miniz.c  mml.c  system.h  utils.c  utils.h  wav.c  wav.h
proj_compat/source/qnx/: _bb_simple_audio_engine.cpp  _bb_simple_audio_engine.h
proj_compat/source/stb/: SOIL.cpp  image_DXT.c  image_DXT.h  stb_image.h  stb_image_aug.c  stbi_DDS.h
proj_compat/toolchain/: android.toolchain.cmake  bar-descriptor.xml  check_qcc_version  ios.toolchain.cmake  qnx.toolchain.cmake
proj_files/: sc.info.h
proj_s3e/: DISTWP8.CMD  ENVS3E  INSTALL  RECREATE  SkeletonKey.mkb  debugtoken1.bar  id_rsa  id_rsa.pub
proj_s3e/build_skeletonkey_xcode/: Info.plist  deploy_config.py  macros.defs  mkb.stamp  temp_defines_debug.h  temp_defines_release.h  tmp.icf
proj_s3e/build_skeletonkey_xcode/SkeletonKey.xcodeproj/: pawelp.pbxuser  project.pbxproj
proj_s3e/build_skeletonkey_xcode/SkeletonKey.xcodeproj/xcshareddata/xcschemes/: Debug GCC ARM.xcscheme  Debug x86.xcscheme  Deploy Tool.xcscheme  Release GCC ARM.xcscheme  Release x86.xcscheme
proj_s3e/build_skeletonkey_xcode/SkeletonKey.xcodeproj/xcuserdata/pawelp.xcuserdatad/xcschemes/: xcschememanagement.plist
proj_s3e/data/: achievements.db  development.icf
proj_s3e/data/fonts/: font_algerian_16.h  font_deutsch_26.h  font_gabriola_14.h
proj_s3e/data/graphics/backgrounds/: make_blur.sh
proj_sdl/: CMakeLists.txt  LOG  build_info.h  configure_and_build_bb  debugtoken1.txt
proj_sdl/compat/: Iw2D.h  IwColour.h  IwFColour.h  IwGx.h  IwResManager.h  s3e.h  s3eTypes.h
proj_sdl/source/: AngelcodeFont.h  BMF_font.cpp  BMF_font.h  FPSLimit.cpp  FPSLimit.hpp  MersenneTwister.cpp  MersenneTwister.h  SDLGLFont.cpp  SDLGLFont.hpp  SDLGLTexture.cpp  SDLGLTexture.hpp  toolkit.cpp  toolkit.h
proj_sdl/source/Qnx/: _bb_simple_audio_engine.cpp  _bb_simple_audio_engine.h
proj_sdl/source/compat/: AffineTransform.h  Iw2D.h  IwGx.h  IwResManager.h  derbh.h  s3e.cpp  s3e.h  s3eAudio.h
proj_sdl/source/qnx/: _bb_simple_audio_engine.h
proj_sdl/source/stb/: SOIL.cpp  SOIL.h  image_helper.c
proj_sdl/toolchain/: bar-descriptor.xml  qnx.toolchain.cmake
source/: achievements.cpp  achievements.h  config.h  debug_ui.cpp  debug_ui.h  game_data.cpp  game_data.h  leadersboard.cpp  leadersboard.h  main.cpp  s3e_externals.c  scene_achievements.cpp  scene_game.cpp  scene_game.h  scene_game_menu.cpp  scene_instructions.cpp  scene_leadersboard.cpp  scene_leadersboard.h  scene_map.cpp  scene_menu.cpp  scene_menu.h  scene_nag.cpp  scene_options.cpp  scene_select_level.cpp  sounds.cpp  sounds.h  sqlite3_wrapper.cpp
source/dgreed/: async.c  darray.c  darray.h  datastruct.c  memory.c  mempool.h  mml.h  system.c
source/ig2d/: ig_distorter.cpp  ig_label.cpp  ig_scene.cpp  ig_sprite.cpp
